# zkViewMachineVision

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  nginx.conf
src/: loadConfig.hpp
src/TrtLib/builder/: CMakeLists.txt
src/TrtLib/common/: preprocess_kernel.cu  preprocess_kernel.cuh
src/TrtLib/infer/: CMakeLists.txt
src/VideoPusher/: CMakeLists.txt
src/app_WebSocket/: CMakeLists.txt  zk_webSocket.cpp  zk_webSocket.hpp  zk_ws_server.cpp
src/app_http/: http_server.cpp
src/app_yolo/: yolo.hpp
src/yolov8/: CMakeLists.txt  decoder_kernel.cu  yolov8_seg.cpp
test/: common.hpp  test_pushvideo.cpp  test_websocket.cpp  test_yolo_Instrument.cpp  test_yolov8_seg.cpp
workspace/log/: 2022-10-15.txt
workspace/yolov8/: v8trans.py
yolov5/: detect.py  rename.py
yolov5/data/: Instrument.yaml
yolov5/models/: yolo.py
yolov5/utils/: general.py
